force-app/main/default/objects/Plantilla_Inspeccion__mdt/Plantilla_Inspeccion__mdt.object-meta.xml
<CustomObject>
    <label>Plantilla de Inspección</label>
    <pluralLabel>Plantillas de Inspección</pluralLabel>
</CustomObject>