force-app/main/default/objects/Plantilla_Inspeccion__mdt/fields/Area_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Area_Oportunidad__c</fullName>
    <label>Área de Oportunidad</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>