force-app/main/default/objects/Plantilla_Inspeccion__mdt/fields/Opciones_Falla__c.field-meta.xml
<CustomField>
    <fullName>Opciones_Falla__c</fullName>
    <label>Opciones de Falla</label>
    <length>255</length>
    <type>Text</type>
</CustomField>