force-app/main/default/objects/Plantilla_Inspeccion__mdt/fields/Pregunta__c.field-meta.xml
<CustomField>
    <fullName>Pregunta__c</fullName>
    <label>Pregunta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>