force-app/main/default/objects/Plantilla_Inspeccion__mdt/fields/Respuesta_Esperada__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Esperada__c</fullName>
    <label>Respuesta Esperada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>