force-app/main/default/objects/Plantilla_Inspeccion__mdt/fields/Tipo_Entrada__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Entrada__c</fullName>
    <label>Tipo de Entrada</label>
    <length>50</length>
    <type>Text</type>
</CustomField>