force-app/main/default/objects/Plantilla_Inspeccion__mdt/fields/Tipo_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Servicio__c</fullName>
    <label>Tipo de Servicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>